Aula 4 - CSS Grid e DOM.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
     </div>
 
+    <!--CONTEÚDO PRINCIPAL-->
     <main>
         <div class="main-container">
             <nav class="header__navigation">
@@ -96,9 +97,11 @@
             </nav>
         </div>
 
+        <!--PLAYLISTS -->
         <div class="playlist-container">
             <div id="result-playlists">
                 <div class="playlist">
+                  <!--ALTERA A SAUDAÇÃO-->
                     <h1 id="greeting"></h1>
                     <h2 class="session">Navegar por todas as seções</h2>
                 </div>
@@ -265,5 +268,7 @@
                 <button type="button">Inscreva-se grátis</button>
             </div>
     </footer>
+    <script src="./script.js" type="text/javascript"></script>
+    <script src="./search.js" type="text/javascript"></script>
 </body>
 </html>
