--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <nav class="header__navigation">
                 <div class="navigation">
                     <button class="arrow-left">
-                        <img src="./src/assets/icons/small-left.png" alt="Seta da esquerda">
+                        <img src="./src/assets/icons/small-left.png" alt="">
                     </button>
                     <button class="arrow-right">
-                        <img src="./src/assets/icons/small-right.png" alt="Seta da direita">
+                        <img src="./src/assets/icons/small-right.png" alt="">
                     </button>
                 </div>
 
@@ -93,7 +93,7 @@
                         <button class="subscribe">Inscreva-se</button>
                         <button class="login">Entrar</button>
                     </div>
-                </div>
+                
             </nav>
         </div>
 
@@ -252,13 +252,9 @@
                     </div>
                   </div>
                 </div>
-        
               </div>
             </div>
-
     </main>
-
-
     <footer class="footer">
         <div class="footer__conteudo">
             <p class="footer__title">Testar o Premium de graça</p>
